# example-applications

./: .gitignore  .gitlab-ci.yml  Dockerfile.x86_64-cuda  LICENSE  README.md  RELEASE_NOTES.md
classifier_recipe/: CMakeLists.txt  README.md  application.cpp  run_inference.run
classifier_recipe/include/: imagenet_torch_nchw_processors.hpp
classifier_recipe/inference/labels/: class_names_10.txt
classifier_recipe/src/: imagenet_torch_nchw_processors.cpp
classifiers/cpp_inference/: CMakeLists.txt  README.md  application.cpp  inference_commands.bash
classifiers/cpp_inference/cmake/: CppFlags.cmake
classifiers/cpp_inference/include/: imagenet_torch_nchw_processors.hpp
classifiers/cpp_inference/src/: imagenet_torch_nchw_processors.cpp
classifiers/python_inference/: README.md  infer.py  inference_commands.bash
classifiers/python_inference/utils/: utils.py
detectors/cpp_inference/: CMakeLists.txt  README.md  application.cpp  inference_commands.bash  inference_commands_multiple_models.bash  log_fps.txt  multiple_model_inference_commands.bash
detectors/cpp_inference/include/: config.h  processors.hpp
detectors/cpp_inference/src/: processors.cpp
detectors/cpp_inference_no_torchvision/: README.md  application.cpp  inference_commands.bash
detectors/cpp_inference_no_torchvision/include/: processors.hpp
detectors/cpp_inference_no_torchvision/src/: processors.cpp
detectors/cpp_inference_non_torchvision/: CMakeLists.txt  application.cpp
detectors/efficientdet/cpp_inference/: CMakeLists.txt  README.md  application.cpp  inference_commands.bash
detectors/efficientdet/cpp_inference/include/: efficientdet_processors.hpp
detectors/efficientdet/cpp_inference/src/: efficientdet_processor.cpp
detectors/efficientdet/cpp_inference_no_torchvision/: CMakeLists.txt  README.md  application.cpp  inference_commands.bash
detectors/efficientdet/cpp_inference_no_torchvision/include/: efficientdet_processors.hpp
detectors/efficientdet/cpp_inference_no_torchvision/src/: efficientdet_processor.cpp
detectors/efficientdet/python_inference/: README.md  infer.py  inference_commands.bash  process.py
detectors/mobilenet_ssd/cpp_inference/: CMakeLists.txt  README.md  application.cpp  inference_commands.bash
detectors/mobilenet_ssd/cpp_inference/include/: mobilenetSSD_processors.hpp
detectors/mobilenet_ssd/cpp_inference/src/: mobilenetSSD_processors.cpp
detectors/mobilenet_ssd/python_inference/: README.md  infer.py  inference_commands.bash
detectors/nanodet/python_inference/: infer.py  inference_commands.bash
detectors/python_inference/: README.md  infer.py  inference_commands.bash
detectors/python_inference/utils/: detector_postprocessor.py  detector_preprocessor.py  utils.py
detectors/utils/: detector_postprocessor.py  detector_preprocessor.py  general_detection_postprocessor.py  utils.py
detectors/yolov5/cpp_inference/: CMakeLists.txt  README.md  application.cpp  inference_commands.bash
detectors/yolov5/cpp_inference/include/: yolov5_processors.hpp
detectors/yolov5/cpp_inference/src/: yolov5_processors.cpp
detectors/yolov5/cpp_inference_no_torchvision/: CMakeLists.txt  README.md  application.cpp  inference_commands.bash
detectors/yolov5/cpp_inference_no_torchvision/include/: yolov5_processors.hpp
detectors/yolov5/cpp_inference_no_torchvision/src/: yolov5_processors.cpp
detectors/yolov5/python_inference/: README.md  infer.py  inference_commands.bash
detectors/yolov8/python_inference/: infer.py  inference_commands.bash
efficientdet/: CMakeLists.txt  application.cpp
efficientdet/include/: efficientdet_processors.hpp
efficientdet/src/: efficientdet_processor.cpp
labels/: class_names_10.txt  coco.txt  pascal_voc.txt
latentai-tvm/include/tvm/runtime/latentai/: lre_cryption_service.hpp  lre_model.hpp
mobilenet_ssd/: CMakeLists.txt  README.md  application.cpp
mobilenet_ssd/include/: mobilenetSSD_processors.hpp
mobilenet_ssd/src/: mobilenetSSD_processors.cpp
mobilenetv2/: CMakeLists.txt  README.md  application.cpp
mobilenetv2/include/: imagenet_processors.hpp
mobilenetv2/src/: imagenet_processors.cpp
setup_scripts/: add_latentai_debian_repository.sh
setup_scripts/agx_nx/: README.md  install-for-examples.sh  install-lor-deps-jp46.sh  install-lor-deps-jp50.sh
setup_scripts/rpi/: README.md  install-for-bullseye.sh  install-for-examples.sh  install-lor-deps.sh
setup_scripts/x86_cuda/: README.md  install-for-examples.sh
utils/: display_model_metadata.hpp  image_manipulation.hpp  parse_inputs.hpp  timer_chorono.hpp  timer_chrono.hpp  timer_example.hpp
yolov5/: CMakeLists.txt  README.md  application.cpp
yolov5/include/: yolov5_processors.hpp
yolov5_torch/: README.md  application.cpp  cmake_install.cmake
yolov5_torch/include/: lre_model.hpp  yolov5_processors.hpp
yolov5_torch/src/: lre_model.cpp  yolov5_processors.cpp
